fix card overflow

--- a/src/admin/dashboard-style.css
+++ b/src/admin/dashboard-style.css
@@ -230,7 +230,7 @@ nav {
     align-items: center;
     flex-direction: column;
     background-color: white;
-    height: 60%;
+    min-height: 60%;
     width: 50%;
     border-radius: 30px;
     padding: 1rem
